--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
       </section>
       <section id="contact">
         <h2>Contact</h2>
-        <p>Email: your-email@example.com</p>
+        <p>Email: 403086z@gmail.com</p>
+        <p>Telegram: @artemievich</p>
       </section>
     </main>
     <footer>
-      <p>&copy; Your Name 2023</p>
+      <p>&copy; Артем Кукушкин 2023</p>
     </footer>
   </body>
 </html>
