--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Your Name - Portfolio</title>
+    <title>Артем Кукушкин - Портфолио</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <h1>Your Name</h1>
+      <h1>Артем Кукушкин</h1>
       <nav>
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#Обо мне">Обо мне</a></li>
+          <li><a href="#projects">Проекты</a></li>
+          <li><a href="#contact">Контакты</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section id="about">
-        <h2>About</h2>
+      <section id="Обо мне">
+        <h2>Обо мне</h2>
         <p>Write a short bio about yourself here.</p>
       </section>
-      <section id="projects">
-        <h2>Projects</h2>
+      <section id="Проекты">
+        <h2>Проекты</h2>
         <ul>
           <li><a href="#">Project 1</a></li>
           <li><a href="#">Project 2</a></li>
           <li><a href="#">Project 3</a></li>
         </ul>
       </section>
-      <section id="contact">
-        <h2>Contact</h2>
+      <section id="Контакты">
+        <h2>Контакты</h2>
         <p>Email: 403086z@gmail.com</p>
         <p>Telegram: @artemievich</p>
       </section>
